<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#8F7A70"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFD2D2"
            android:fontFamily="@font/maplestory_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/dialog_duration_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/dialog_text_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maplestory_light"
                android:gravity="center"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <SeekBar
            android:id="@+id/dialog_seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:max="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/dialog_card_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#FFFCFC"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#E8FFEB"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/dialog_text_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/maplestory_light"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/dialog_duration_small"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dialog_card_midium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#FFFCFC"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#E8FFEB"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/dialog_text_midium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/maplestory_light"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/dialog_duration_midium"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dialog_card_large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#FFFCFC"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#E8FFEB"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/dialog_text_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/maplestory_light"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/dialog_duration_large"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/dialog_card_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/dialog_text_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/maplestory_light"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/dialog_duration_cancel"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/dialog_card_apply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/dialog_text_apply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/maplestory_light"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/dialog_duration_apply"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>