<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpinActivity">

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A57979"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/marking" />

            <ImageView
                android:id="@+id/iv_wheel"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:clickable="true"
                app:srcCompat="@drawable/arrow" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:gravity="bottom|right"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"></LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom"
                            android:layout_weight="11"
                            android:gravity="clip_horizontal"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="2">

                                <TextView
                                    android:id="@+id/textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="15dp"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/maplestory_light"
                                    android:gravity="center"
                                    android:text="@string/display_monitor"
                                    android:textColor="#FFFFFF" />

                                <TextView
                                    android:id="@+id/display_text_monitor"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="15dp"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/maplestory_light"
                                    android:gravity="center"
                                    android:text="3"
                                    android:textAlignment="viewStart"
                                    android:textColor="#FFFFFF"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <Switch
                                android:id="@+id/switch_sound"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="bottom"
                                android:layout_margin="10dp"
                                android:gravity="center"
                                android:switchPadding="5dp"
                                android:text="@string/sound_title"
                                android:textAlignment="center"
                                android:textColor="#FFFFFF"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="8"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/setting_imageCard"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardCornerRadius="10dp"
                            app:cardUseCompatPadding="false">

                            <TextView
                                android:id="@+id/image_text_set"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:fontFamily="@font/maplestory_light"
                                android:gravity="center"
                                android:text="@string/setting_arrow"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/setting_backCard"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:fontFamily="@font/maplestory_light"
                                android:gravity="center"
                                android:text="@string/setting_background"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/setting_speedCard"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:id="@+id/speed_text_set"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:fontFamily="@font/maplestory_light"
                                android:gravity="center"
                                android:text="@string/setting_speed"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>